--- a/css/note.css
+++ b/css/note.css
@@ -160,3 +160,76 @@ header #logo {
 .notebutton:hover {
 	background-color: #4F67FF;
 }
+
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+	padding: 2px 16px;
+	height: 50px;
+    background-color: #2ABB9B;
+    color: white;
+}
+
+.modal-header h2 {
+	margin-top: 5px;
+}
+
+.modal-body {
+	padding: 16px 16px;
+	height:60px;
+}
+
+#myModal input[type="text"] {
+	border: 1px solid;
+	border-radius: 5px;
+}
+
+#sharebutton {
+	width: 100px;
+	height: 25px;
+	font-size: 15px;
+}
